--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t  myimage -f Dockerfile.dev .
+  - docker build -t  CrinaD/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run myimage/docker-react npm run test -- --coverage
+  - docker run CrinaD/docker-react npm run test -- --coverage
